[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]

tokio.workspace= true
serde_json.workspace = true
serde.workspace = true
anyhow.workspace = true
eyre.workspace = true
clap.workspace = true
tracing.workspace = true
hex.workspace = true
bytes.workspace = true
rand.workspace = true

# Local dependencies
library = { path = "../library" }

# Reth dependencies
reth-chainspec.workspace = true
reth-tasks.workspace = true
reth-ethereum-primitives.workspace = true
reth-ethereum.workspace = true
reth-node-core.workspace = true
reth-node-builder.workspace = true
reth-node-ethereum.workspace = true
reth.workspace = true
reth-cli-util.workspace = true
reth-cli.workspace = true
reth-cli-commands.workspace = true
reth-tracing.workspace = true
reth-db.workspace = true
reth-provider.workspace = true
reth-primitives.workspace = true
reth-trie-db.workspace = true
reth-ethereum-engine-primitives.workspace = true

# Alloy dependencies
alloy.workspace = true
alloy-genesis.workspace = true
alloy-primitives.workspace = true

# Malachite dependencies
malachitebft-core-types.workspace = true
malachitebft-app-channel.workspace = true

